--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -858,12 +858,15 @@ HOMEPAGE
       margin-bottom: 1rem;
     }
     &__form {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       grid-gap: 1rem;
+
       &:not(:last-of-type) {
         margin-bottom: 1rem;
       }
       &__input-group {
+        width: 100%;
         display: grid;
         align-items: center;
         // grid-template-columns: minmax(1.5rem, 1fr) 1fr;
