--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1275,6 +1275,95 @@ HOMEPAGE
   }
 }
 
+// Login Page
+.login {
+  &__body-container {
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    color: var(--text-color-black);
+  }
+  &__main {
+    padding: 10rem 10rem 10rem 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 75vh;
+    background-image: url('../img/SLIET_Longowal_Main_Building.jpg');
+    background-size: cover;
+    background-position: center;
+
+    @include respond(tab-port) {
+      padding: 4rem 4rem 4rem 4rem;
+    }
+    &__login-form-container {
+      // min-width: 40vw;
+      padding: 3rem;
+      border-radius: 2rem;
+      box-shadow: 1px 3px 6px #22222222;
+      background-color: #ffffff99;
+      backdrop-filter: blur(0.6rem);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      grid-gap: 3rem;
+      &__heading {
+        font-size: 3.6rem;
+        user-select: none;
+      }
+      &__form {
+        display: flex;
+        flex-direction: column;
+        grid-gap: 2rem;
+        &__group {
+          display: grid;
+          grid-template-columns: 10rem 1fr;
+          align-items: center;
+          grid-gap: 1rem;
+          &__label {
+            font-size: 1.6rem;
+            font-weight: 600;
+            user-select: none;
+          }
+          &__input {
+            font-size: 1.6rem;
+            padding: 1rem 2rem;
+            outline: none;
+            border: none;
+            border-radius: 1.5rem;
+            background-color: #ffffffee;
+            border: 1px solid #ffffff66;
+
+            &[type='submit'] {
+              padding: 1rem 3rem;
+              color: var(--text-color-white);
+              background-color: var(--primary-color);
+              border: 1px solid var(--primary-color);
+              transition: all 0.4s;
+              width: fit-content;
+              &:hover {
+                background-color: var(--primary-color-darken);
+                border: 1px solid var(--primary-color-darken);
+              }
+            }
+          }
+          &__forgetpassword {
+            font-size: 1.6rem;
+            justify-self: end;
+            transition: all 0.4s;
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// Register Page
+.register {
+}
+
 /* -=-=-=-=-=-=
 CSS Utilities
 -=-=-=-=-=-= */
