--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -125,6 +125,7 @@ Buttons
 Common Components
 ===================== */
 .nav {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -250,6 +251,7 @@ Common Components
   }
 }
 .footer {
+  font-family: 'Poppins', sans-serif;
   text-align: center;
   padding: 3rem;
   font-size: 1.6rem;
@@ -263,6 +265,7 @@ Common Components
   }
 }
 .mobile-nav {
+  font-family: 'Poppins', sans-serif;
   position: fixed;
   height: 100vh;
   background-color: #ffffff99;
@@ -1445,6 +1448,113 @@ HOMEPAGE
   }
 }
 
+// Profile Page
+.profile {
+  &__body-container {
+    font-family: 'Poppins';
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 10rem 10rem;
+    grid-gap: 10rem;
+    min-height: 79vh;
+    @include respond(tab-port) {
+      padding: 4rem;
+      grid-gap: 5rem;
+      grid-template-columns: unset;
+    }
+  }
+  &__header {
+    position: relative;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+
+    &__profile {
+      display: flex;
+      flex-direction: column;
+      grid-gap: 3rem;
+
+      &__basic-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        grid-gap: 1rem;
+        &__dp {
+          max-width: 30rem;
+          max-height: 30rem;
+          object-fit: cover;
+          object-position: top;
+          border-radius: 2rem;
+        }
+        &__text {
+          &__name {
+            font-size: 3.8rem;
+            @include respond(tab-port) {
+              font-size: 3.6rem;
+            }
+          }
+          &__brief {
+          }
+        }
+      }
+      &__external-links {
+        display: flex;
+        flex-direction: column;
+        &__links {
+          align-items: center;
+          text-align: center;
+          display: flex;
+          grid-gap: 1rem;
+          justify-content: center;
+
+          &__link {
+            max-width: 3rem;
+            &__icon {
+            }
+          }
+        }
+      }
+    }
+  }
+  &__main {
+    overflow-x: hidden;
+    overflow-y: auto;
+    &__info-container {
+      &:not(:last-of-type) {
+        margin-bottom: 2rem;
+      }
+      &__heading {
+        margin-bottom: 1.5rem;
+      }
+      &__info {
+        display: flex;
+        flex-direction: column;
+        &__group {
+          display: grid;
+          grid-gap: 1rem;
+          align-items: center;
+          grid-template-columns: 13.5rem 1fr;
+          &__title {
+            font-size: 1.5rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            position: relative;
+            // &::after {
+            //   content: ':';
+            //   position: absolute;
+            //   right: 0;
+            //   bottom: 1px;
+            // }
+          }
+          &__text {
+            font-size: 1.6rem;
+          }
+        }
+      }
+    }
+  }
+}
 /* -=-=-=-=-=-=
 CSS Utilities
 -=-=-=-=-=-= */
