--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1524,6 +1524,82 @@ HOMEPAGE
   font-size: 1.6rem;
 }
 
+.gallery__body-container {
+  font-family: "Poppins";
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 10rem;
+  grid-gap: 6rem;
+  min-height: 79vh;
+}
+@media only screen and (max-width: 56.25em) {
+  .gallery__body-container {
+    padding: 4rem;
+    grid-gap: 3rem;
+  }
+}
+.gallery__main {
+  display: flex;
+  flex-direction: column;
+  grid-gap: 3rem;
+}
+.gallery__main__category-options {
+  display: flex;
+  grid-gap: 1rem;
+  flex-wrap: wrap;
+}
+.gallery__main__category-options__category {
+  border: 1px solid var(--primary-color);
+  outline: none;
+  background-color: transparent;
+  color: var(--primary-color);
+  font-size: 1.6rem;
+  transition: all 0.4s;
+  padding: 0.7rem 2rem;
+  border-radius: 1rem;
+  font-weight: 600;
+}
+.gallery__main__category-options__category:hover, .gallery__main__category-options__category--active {
+  border-color: var(--primary-color-darken);
+  background-color: var(--primary-color-darken);
+  color: var(--text-color-white);
+}
+.gallery__main__gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-auto-rows: min-content;
+  grid-gap: 1.5rem;
+}
+.gallery__main__gallery__item {
+  overflow: hidden;
+  position: relative;
+  opacity: 0.8;
+  transition: opacity 0.4s;
+}
+.gallery__main__gallery__item:hover {
+  opacity: 1;
+}
+.gallery__main__gallery__item:hover__name::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+}
+.gallery__main__gallery__item__name {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 1.6rem;
+  width: 100%;
+  transition: transform 0.3s 0.4s;
+  color: var(--text-color-white);
+  z-index: 3;
+  padding: 0.7rem 1.4rem;
+  background-color: #0092dc22;
+  color: var(--text-color-white);
+  backdrop-filter: blur(1px);
+}
+
 /* -=-=-=-=-=-=
 CSS Utilities
 -=-=-=-=-=-= */
