--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1555,6 +1555,87 @@ HOMEPAGE
     }
   }
 }
+
+// Gallery Page
+.gallery {
+  &__body-container {
+    font-family: 'Poppins';
+    display: flex;
+    flex-direction: column;
+
+    padding: 3rem 10rem;
+    grid-gap: 6rem;
+    min-height: 79vh;
+    @include respond(tab-port) {
+      padding: 4rem;
+      grid-gap: 3rem;
+    }
+  }
+  &__header {
+  }
+  &__main {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 3rem;
+    &__category-options {
+      display: flex;
+      grid-gap: 1rem;
+      flex-wrap: wrap;
+      &__category {
+        border: 1px solid var(--primary-color);
+        outline: none;
+        background-color: transparent;
+        color: var(--primary-color);
+        font-size: 1.6rem;
+        transition: all 0.4s;
+        padding: 0.7rem 2rem;
+        border-radius: 1rem;
+        font-weight: 600;
+        &:hover,
+        &--active {
+          border-color: var(--primary-color-darken);
+          background-color: var(--primary-color-darken);
+          color: var(--text-color-white);
+        }
+      }
+    }
+    &__gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+      grid-auto-rows: min-content;
+      grid-gap: 1.5rem;
+      &__item {
+        overflow: hidden;
+        position: relative;
+        opacity: 0.8;
+        transition: opacity 0.4s;
+        &:hover {
+          opacity: 1;
+          &__name::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: var(--primary-color);
+          }
+        }
+        &__name {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          font-size: 1.6rem;
+          width: 100%;
+          transition: transform 0.3s 0.4s;
+          color: var(--text-color-white);
+          z-index: 3;
+          padding: 0.7rem 1.4rem;
+          background-color: #0092dc22;
+          color: var(--text-color-white);
+          backdrop-filter: blur(1px);
+        }
+      }
+    }
+  }
+}
 /* -=-=-=-=-=-=
 CSS Utilities
 -=-=-=-=-=-= */
